# screening_workflow

./: .env.example  README.md  langgraph.json  pyproject.toml  run.py  run_exclusion_screening.py  run_qa_screening.py  run_retrieval.py  workfile.py
prompts/: convert_to_json_prompt.md  reasoning_prompt.md  retrieval_prompt.md
src/agent/: __init__.py  graph.py  graph_qa.py  graph_screening.py  graph_structured_retrieval.py  graph_structured_retrieval_slr.py
src/common_nodes/: retriever.py
src/utils/: __init__.py  fulltext_manipulation.py  prompt_utils.py  pydantic_utils.py  zotero_integration.py
