[project]
name = "agent"
version = "0.0.1"
description = "AI-powered workflows for systematic literature review using LangGraph, LLM agents and Zotero integration."
authors = [
    { name = "Richard Reider", email = "richard.reider@ovgu.de" },
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    "langgraph>=1.0.3",
    "python-dotenv>=1.2.1",
    "syslira-tools @ git+https://github.com/RaikoPipe/syslira-tools",
    'langchain-community',
    'langchain-ollama',
    'langchain',
    'langchain-anthropic',
    'langchain-core',
    'markdown',
    'unstructured',
    'pymupdf4llm[ocr,layout]',
    'pandas>=2.0.0',
    'pydantic>=2.0.0',
    'tqdm>=4.66.0',
    'loguru>=0.7.0',
    'chromadb>=0.4.0',
    'rapidfuzz>=3.0.0',
    'typing-extensions>=4.0.0'
]


[project.optional-dependencies]
dev = ["mypy>=1.11.1", "ruff>=0.6.1"]

[build-system]
requires = ["setuptools>=73.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["langgraph.templates.agent", "agent"]
[tool.setuptools.package-dir]
"langgraph.templates.agent" = "src/agent"
"agent" = "src/agent"


[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.ruff]
lint.select = [
    "E",    # pycodestyle
    "F",    # pyflakes
    "I",    # isort
    "D",    # pydocstyle
    "D401", # First line should be in imperative mood
    "T201",
    "UP",
]
lint.ignore = [
    "UP006",
    "UP007",
    # We actually do want to import from typing_extensions
    "UP035",
    # Relax the convention by _not_ requiring documentation for every function parameter.
    "D417",
    "E501",
]
[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "UP"]
[tool.ruff.lint.pydocstyle]
convention = "google"

[dependency-groups]
dev = [
    "anyio>=4.7.0",
    "langgraph-cli[inmem]>=0.2.8",
    "mypy>=1.13.0",
    "pytest>=8.3.5",
    "ruff>=0.8.2",
]
